--- a/portfolio.html
+++ b/portfolio.html
@@ -22,3 +22,35 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
 </head>
+
+<body>
+	<!--main------------------------>
+	<section id="main">
+			
+				<!--navigation-------------------------------->
+				<nav>
+
+						<!--logo--->
+						<!--<a href="#" class="logo">Vinu Balagopal A P</a>-->
+						
+						<!--menu--------->
+						<div class="toggle"></div>
+						<ul class="menu">
+						<!--<li><a href="#main" >Home</a></li>	
+						<li><a href="#about">About</a></li>	
+						<li><a href="#portfolio">Portfolio</a></li>		
+						<li><a href="#contact-form">Contact</a></li>	
+						</ul>-->
+
+				</nav>
+			
+
+				<!--name--------------------------->
+				<div class="name">
+
+
+					<!--hello------->
+
+					<!--name--->
+					<h1>I'm <font color="#17d1ac">Vinu</font> Balagopal A P</h1>
+					<br>
