--- a/portfolio.html
+++ b/portfolio.html
@@ -54,3 +54,23 @@
 					<!--name--->
 					<h1>I'm <font color="#17d1ac">Vinu</font> Balagopal A P</h1>
 					<br>
+
+					<!--details--------------->
+					<p class="details"> UI/UX Developer <br>
+								<br>
+								Community Lead @ TinkerHub <br>
+								<br>
+								Co-Founder & CTO @ EDC KMCTCE <br>
+								<br>
+								Graphic Designer & Core Team Member @ Hack The Mountains
+					</p>
+
+
+					<!--cv button-------------------->
+					<button type="button" class="btn btn-link"> <a href="https://drive.google.com/file/d/13QCsRrffmlyEWDug1_JURvoek9TvfTeg/view" >Download CV</a></button>
+					
+				</div>
+
+
+				<!--down arrow-------------->
+				<div class="black-line" ></div>
