--- a/portfolio.html
+++ b/portfolio.html
@@ -74,3 +74,18 @@
 
 				<!--down arrow-------------->
 				<div class="black-line" ></div>
+
+
+				<!--social---------------->
+				<div class="social">
+				<a href="https://www.linkedin.com/in/vinubalagopalap/"><i class="fab fa-linkedin-in"></i></a>	
+				<a href="https://twitter.com/balagopalvinu"><i class="fab fa-twitter"></i></a>
+				<a href="https://www.instagram.com/vinubalagopalap/"><i class="fab fa-instagram"></i></a>
+				<a href="https://www.youtube.com/channel/UCdMkVgxHvGJaFQ7ibwEADiA?view"><i class="fab fa-youtube"></i></a>	
+				<a href="https://medium.com/@vinubalagopalap"><i class="fab fa-medium"></i></a>  
+				</div>
+				
+	</section>
+
+</body>
+</html>
