--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<!--title-icon--------->
-		<link rel="shortcut icon" href="images/icon.png">
+		<link rel="shortcut icon" href="Images/icon.png">
 		<link rel="stylesheet" type="text/css" href="portfolio.css"/>
 
 		<!--Google Fonts-->
