--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
 	<!--main------------------------>
-	<section id="main">
+	<section id="main" class="bg-img">
 			
 				<!--navigation-------------------------------->
 				<nav>
