--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<!--title-icon--------->
 		<link rel="shortcut icon" href="icon.png">
-		<link rel="stylesheet" type="text/css" href="Portfolio.css"/>
+		<link rel="stylesheet" type="text/css" href="portfolio.css"/>
 
 		<!--Google Fonts-->
 		<link href="https://fonts.googleapis.com/css2?family=Rancho&display=swap" rel="stylesheet"> 
